# ComfyUI-HX-Captioner

./: README.md  __init__.py  captioner.py  pyproject.toml  requirements.txt
etc/: config.json
